--- a/KpopZstation.csproj
+++ b/KpopZstation.csproj
@@ -126,6 +126,7 @@
       <DependentUpon>KpopzstationModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\DatabaseSingleton.cs" />
   </ItemGroup>
   <ItemGroup>
     <EntityDeploy Include="Model\KpopzstationModel.edmx">
@@ -147,7 +148,6 @@
     <Folder Include="Controller\" />
     <Folder Include="Factory\" />
     <Folder Include="Handler\" />
-    <Folder Include="Repository\" />
     <Folder Include="View\" />
   </ItemGroup>
   <ItemGroup>
