--- a/KpopZstation.csproj
+++ b/KpopZstation.csproj
@@ -79,6 +79,31 @@
     <Content Include="App_Data\KpopzstationDatabase_log.ldf">
       <DependentUpon>KpopzstationDatabase.mdf</DependentUpon>
     </Content>
+    <Content Include="Assets\Albums\638058597622333864.jfif" />
+    <Content Include="Assets\Albums\638058600253472624.jpg" />
+    <Content Include="Assets\Albums\638058602735846856.jpg" />
+    <Content Include="Assets\Albums\638058716701119579.jpg" />
+    <Content Include="Assets\Albums\638058717003784490.jpg" />
+    <Content Include="Assets\Albums\638059437442094314.jfif" />
+    <Content Include="Assets\Albums\638059438205501702.jpg" />
+    <Content Include="Assets\Albums\638059439116596296.jpg" />
+    <Content Include="Assets\Albums\638059439942434092.jfif" />
+    <Content Include="Assets\Albums\638059442482614063.jfif" />
+    <Content Include="Assets\Albums\638059446920356665.jfif" />
+    <Content Include="Assets\Albums\638059447624756394.jfif" />
+    <Content Include="Assets\Albums\638059449025055368.jpg" />
+    <Content Include="Assets\Albums\638059449905363164.jpg" />
+    <Content Include="Assets\Albums\638059451370799986.jfif" />
+    <Content Include="Assets\Artists\638057862770194070.jpeg" />
+    <Content Include="Assets\Artists\638057899497035774.jfif" />
+    <Content Include="Assets\Artists\638057900448119533.jfif" />
+    <Content Include="Assets\Artists\638058485179546128.jfif" />
+    <Content Include="Assets\Artists\638058486287141139.jfif" />
+    <Content Include="Assets\Artists\638058489004609070.jfif" />
+    <Content Include="Assets\Artists\638058554486609538.jfif" />
+    <Content Include="Assets\Artists\638059446432559006.jfif" />
+    <Content Include="Assets\Artists\638059447901481658.jfif" />
+    <Content Include="Assets\Artists\638059450808002463.jfif" />
     <Content Include="Model\KpopzstationModel.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>KpopzstationModel.Context.cs</LastGenOutput>
@@ -89,9 +114,12 @@
       <DependentUpon>KpopzstationModel.edmx</DependentUpon>
       <LastGenOutput>KpopzstationModel.cs</LastGenOutput>
     </Content>
+    <Content Include="View\ArtistDetail.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Factory\AlbumFactory.cs" />
+    <Compile Include="Factory\ArtistFactory.cs" />
     <Compile Include="Model\Album.cs">
       <DependentUpon>KpopzstationModel.tt</DependentUpon>
     </Compile>
@@ -126,7 +154,15 @@
       <DependentUpon>KpopzstationModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\AlbumRepository.cs" />
     <Compile Include="Repository\DatabaseSingleton.cs" />
+    <Compile Include="View\ArtistDetail.aspx.cs">
+      <DependentUpon>ArtistDetail.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="View\ArtistDetail.aspx.designer.cs">
+      <DependentUpon>ArtistDetail.aspx</DependentUpon>
+    </Compile>
     <Compile Include="View\MainView.Master.cs">
       <DependentUpon>MainView.Master</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -154,7 +190,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Controller\" />
-    <Folder Include="Factory\" />
     <Folder Include="Handler\" />
   </ItemGroup>
   <ItemGroup>
