--- a/KpopZstation.csproj
+++ b/KpopZstation.csproj
@@ -79,10 +79,8 @@
     <Content Include="App_Data\KpopzstationDatabase_log.ldf">
       <DependentUpon>KpopzstationDatabase.mdf</DependentUpon>
     </Content>
-    <Content Include="Assets\Albums\638058597622333864.jfif" />
     <Content Include="Assets\Albums\638058600253472624.jpg" />
     <Content Include="Assets\Albums\638058602735846856.jpg" />
-    <Content Include="Assets\Albums\638058716701119579.jpg" />
     <Content Include="Assets\Albums\638058717003784490.jpg" />
     <Content Include="Assets\Albums\638059437442094314.jfif" />
     <Content Include="Assets\Albums\638059438205501702.jpg" />
@@ -97,10 +95,6 @@
     <Content Include="Assets\Artists\638057862770194070.jpeg" />
     <Content Include="Assets\Artists\638057899497035774.jfif" />
     <Content Include="Assets\Artists\638057900448119533.jfif" />
-    <Content Include="Assets\Artists\638058485179546128.jfif" />
-    <Content Include="Assets\Artists\638058486287141139.jfif" />
-    <Content Include="Assets\Artists\638058489004609070.jfif" />
-    <Content Include="Assets\Artists\638058554486609538.jfif" />
     <Content Include="Assets\Artists\638059446432559006.jfif" />
     <Content Include="Assets\Artists\638059447901481658.jfif" />
     <Content Include="Assets\Artists\638059450808002463.jfif" />
@@ -163,6 +157,7 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\AlbumRepository.cs" />
+    <Compile Include="Repository\ArtistRepository.cs" />
     <Compile Include="Repository\DatabaseSingleton.cs" />
     <Compile Include="View\AlbumDetail.aspx.cs">
       <DependentUpon>AlbumDetail.aspx</DependentUpon>
